# zc4

./: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
.github/workflows/: 4.yml  android-build.yml  build.yml
app/: build.gradle  build.gradle.bak  proguard-rules.pro
app/src/cpp/: native-lib.cpp  utils.cpp
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CMakeLists.txt   license.ld   license_core.c  native_license.cpp
app/src/main/java/com/yourpackage/license/: LicenseActivity.java  LicenseProtector.java  MainActivity.java  NativeLicenseManager.java
app/src/main/res/layout/: activity_license.xml
app/src/main/res/values/: strings.xml
scripts/: license_generator.py  patch_so.py
src/: LicenseActivity.java  license_core.c
